package instanceofteam.mastermind.models;


class ProposedCombination extends Combination {
    ProposedCombination(String combinationLetters) {
        super(combinationLetters);
    }
}
